# 2026-04-k2

./: .gitattributes  .gitignore  Cargo.toml  K2-V12-Critical-output.md  K2-V12-High-output.md  K2-V12-Med-Low-output.md  README.md  README_SPONSOR.md  build.sh  generate-client-bindings.sh  rust-toolchain.toml
contracts/a-token/: Cargo.toml
contracts/a-token/src/: balance.rs  contract.rs  lib.rs  storage.rs
contracts/aquarius-swap-adapter/: Cargo.toml
contracts/aquarius-swap-adapter/src/: lib.rs  test.rs
contracts/debt-token/: Cargo.toml
contracts/debt-token/src/: balance.rs  contract.rs  error.rs  lib.rs  storage.rs  upgrade.rs
contracts/flash-liquidation-helper/: Cargo.toml
contracts/flash-liquidation-helper/src/: error.rs  lib.rs  validation.rs
contracts/incentives/: Cargo.toml
contracts/incentives/src/: calculation.rs  constants.rs  contract.rs  error.rs  events.rs  lib.rs  storage.rs
contracts/interest-rate-strategy/: Cargo.toml
contracts/interest-rate-strategy/src/: contract.rs  lib.rs  storage.rs  upgrade.rs  validation.rs
contracts/kinetic-router/: Cargo.toml
contracts/kinetic-router/fuzz/: Cargo.toml  dict.txt  router.dict
contracts/kinetic-router/fuzz/docs/: APPROACH_COMPARISON.md  EXECUTIVE_REPORT.md  QUICK_REFERENCE.md
contracts/kinetic-router/fuzz/fuzz_targets/: fuzz_admin_ops.rs  fuzz_admin_transfer.rs  fuzz_auth_boundaries.rs  fuzz_economic_invariants.rs  fuzz_flash_loan.rs  fuzz_lending_operations.rs  fuzz_liquidation.rs  fuzz_multi_asset.rs  fuzz_price_scenarios.rs  fuzz_reserve_config.rs  fuzz_target_1.rs
contracts/kinetic-router/fuzz/fuzz_targets/common/: constants.rs  executor.rs  invariants.rs  mocks.rs  mod.rs  operations.rs  setup.rs  snapshot.rs  stats.rs
contracts/kinetic-router/fuzz/src/: invariants.rs  lib.rs
contracts/kinetic-router/src/: access_control.rs  admin.rs  calculation.rs  emergency.rs  error.rs  events.rs  flash_loan.rs  lib.rs  liquidation.rs  operations.rs  params.rs  price.rs  reserve.rs  router.rs  storage.rs  swap.rs  treasury.rs  upgrade.rs  validation.rs  views.rs
contracts/liquidation-engine/: Cargo.toml
contracts/liquidation-engine/src/: admin.rs  calculation.rs  contract.rs  lib.rs  storage.rs  types.rs  upgrade.rs  validation.rs
contracts/pool-configurator/: Cargo.toml
contracts/pool-configurator/src/: contract.rs  lib.rs  oracle.rs  reserve.rs  storage.rs
contracts/price-oracle/: Cargo.toml
contracts/price-oracle/src/: contract.rs  error.rs  lib.rs  oracle.rs  storage.rs  upgrade.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: constants.rs  dex.rs  errors.rs  events.rs  lib.rs  types.rs  upgradeable.rs  utils.rs
contracts/soroswap-swap-adapter/: Cargo.toml
contracts/soroswap-swap-adapter/src/: lib.rs  test.rs
contracts/token/: Cargo.toml
contracts/token/src/: contract.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs
docs/: 00-INDEX.md  01-OVERVIEW.md  02-ARCHITECTURE.md  03-CORE-CONCEPTS.md  04-COMPONENTS.md  05-FLOWS.md  06-LIQUIDATION.md  07-INTEREST-MODEL.md  08-DEX-INTEGRATION.md  08-ORACLE.md  09-SECURITY.md  10-STORAGE.md  11-ADMIN.md  12-DEPLOYMENT-REFERENCE.md  12-DEPLOYMENT.md  13-INTEGRATION.md  14-DEVELOPER.md  15-GLOSSARY.md  FUZZING.md  INCENTIVES_ADMIN_API.md  _config.yml  fuzzy-testing.md  how-to-run-fuzzy-tests.md  index.md
tests/: README.md
tests/integration-tests/: Cargo.toml
tests/integration-tests/src/: gas_tracking.rs  lib.rs  poc_borrow_ltv_mismatch.rs  resource_analyzer.rs  setup.rs  test_aquarius_integration.rs  test_aquarius_k2_integration.rs  test_auth.rs  test_critical_flows.rs  test_flash_liquidation.rs  test_flash_liquidation_edge_cases.rs  test_flash_loan.rs  test_flash_loan_dex_integration.rs  test_fork_budget.rs  test_hf_state.rs  test_incentives.rs  test_interest_accrual.rs  test_k2_aquarius_full_integration.rs  test_lending_flow.rs  test_liquidation_flow.rs  test_liquidator.rs  test_oracle_integration.rs  test_prepare_execute_liquidation.rs  test_redstone_feed_direct.rs  test_redstone_integration.rs  test_redstone_official.rs  test_reserve_fragmentation.rs  test_resource_analysis.rs  test_swap_collateral.rs  test_treasury.rs  test_upgrades.rs
tests/unit-tests/: Cargo.toml
tests/unit-tests/src/: a_token_test.rs  atoken_transfer_bitmap_desync.rs  audit_finding_03_fix_verification.rs  audit_finding_03_silent_overflow.rs  audit_poc_pr78.rs  audit_remediation_coverage.rs  debt_token_test.rs  flash_liquidation_helper_test.rs  incentives_auth_bypass_poc.rs  incentives_distribution_end_test.rs  incentives_test.rs  interest_rate_strategy_test.rs  kinetic_router_functional_tests.rs  kinetic_router_reserve_id_collision_poc.rs  kinetic_router_test.rs  kinetic_router_test_auth_edge.rs  kinetic_router_test_blacklist.rs  kinetic_router_test_blacklist_bypass.rs  kinetic_router_test_coverage.rs  kinetic_router_test_dynamic_precision.rs  kinetic_router_test_execute_operation_security.rs  kinetic_router_test_flash_loan.rs  kinetic_router_test_gated_pool.rs  kinetic_router_test_health_factor_validation.rs  kinetic_router_test_invariants.rs  kinetic_router_test_large_numbers.rs  kinetic_router_test_liquidation.rs  kinetic_router_test_liquidation_whitelist.rs  kinetic_router_test_optimizations.rs  kinetic_router_test_price_calc.rs  kinetic_router_test_recipient_validation.rs  kinetic_router_test_reserve_id_fix.rs  kinetic_router_test_safety.rs  kinetic_router_test_supply_borrow.rs  kinetic_router_test_upgrade.rs  lib.rs  liquidation_engine_test.rs  poc_stale_threshold_withdraw.rs  pool_configurator_test.rs  price_oracle_test.rs  (+8 more)
tests/unit-tests/src/a_token/: test.rs
